# v2rayA-windows-helper

./: .gitignore  README.md
glued/OpenWebview2Window/: .gitignore  CMakeLists.txt  README.md  build.bat
glued/OpenWebview2Window/extlibs/webview/include/: webview.hpp
glued/OpenWebview2Window/src/: main.cpp  wargv.cpp
packer/: dir_maker.py  dir_tree.dirs  file_utils.py  pack.py
src/: fake_image_class.py  helper.build_opts  helper.py  nuitka_build.py  open_webview.py  proxy_setter.py
src/OpenWebview2Window/: .gitignore  README.md  build.bat
src/OpenWebview2Window/EdgeBrowserApp/: EdgeBrowserApp.cpp  EdgeBrowserApp.vcxproj  EdgeBrowserAppDlg.cpp  EdgeBrowserAppDlg.h  ParseOptions.cpp
src/OpenWebview2Window/extlibs/Microsoft.Web.WebView/: version
src/OpenWebview2Window/src/: main.cpp  option_map.hpp  wargv.h
src/cext/: .gitignore  get_process_hwnd.pyi  get_process_hwnd.pyx
src/cext/native/: get_process_hwnd.c  get_process_hwnd.h
src/hook_minimize_button/: CMakeLists.txt  cmake_build.bat  hook_minimize_button.cpp  hook_minimize_button.h  hook_minimize_button_dll.cpp  readme.md  run.bat
